<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">md-slide</string>
    <string name="activity_title_settings">Settings</string>

    <string name="action_fullscreen">Full screen</string>
    <string name="action_first_page">First</string>
    <string name="action_last_page">Last</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">@string/activity_title_settings</string>

    <string name="theme_white">WHITE</string>
    <string name="theme_black">BLACK</string>

    <string name="transition_default">DEFAULT</string>
    <string name="transition_fade">FADE</string>
    <string name="transition_push">PUSH</string>
    <string name="transition_pop">POP</string>

    <string name="font_name_default"/>
    <string name="font_name_code_default"/>
    <string name="font_name_quote_default"/>
    <string name="font_name_migu_1c_bold">migu-1c-20130617/migu-1c-bold.ttf</string>
    <string name="font_name_migu_1c_regular">migu-1c-20130617/migu-1c-regular.ttf</string>
    <string name="font_name_roboto_black">roboto/Roboto-Black.ttf</string>
    <string name="font_name_roboto_black_italic">roboto/Roboto-BlackItalic.ttf</string>
    <string name="font_name_roboto_bold">roboto/Roboto-Bold.ttf</string>
    <string name="font_name_roboto_bold_italic">roboto/Roboto-BoldItalic.ttf</string>
    <string name="font_name_roboto_italic">roboto/Roboto-Italic.ttf</string>
    <string name="font_name_roboto_light">roboto/Roboto-Light.ttf</string>
    <string name="font_name_roboto_light_italic">roboto/Roboto-LightItalic.ttf</string>
    <string name="font_name_roboto_medium">roboto/Roboto-Medium.ttf</string>
    <string name="font_name_roboto_medium_italic">roboto/Roboto-MediumItalic.ttf</string>
    <string name="font_name_roboto_regular">roboto/Roboto-Regular.ttf</string>
    <string name="font_name_roboto_thin">roboto/Roboto-Thin.ttf</string>
    <string name="font_name_roboto_thin_italic">roboto/Roboto-ThinItalic.ttf</string>
    <string name="font_name_roboto_condensed_bold">roboto/RobotoCondensed-Bold.ttf</string>
    <string name="font_name_roboto_condensed_bold_italic">roboto/RobotoCondensed-BoldItalic.ttf</string>
    <string name="font_name_roboto_condensed_italic">roboto/RobotoCondensed-Italic.ttf</string>
    <string name="font_name_roboto_condensed_light">roboto/RobotoCondensed-Light.ttf</string>
    <string name="font_name_roboto_condensed_light_italic">roboto/RobotoCondensed-LightItalic.ttf</string>
    <string name="font_name_roboto_condensed_regular">roboto/RobotoCondensed-Regular.ttf</string>
    <string name="font_name_source_code_pro_black">source-code-pro/SourceCodePro-Black.otf</string>
    <string name="font_name_source_code_pro_bold">source-code-pro/SourceCodePro-Bold.otf</string>
    <string name="font_name_source_code_pro_extra_light">source-code-pro/SourceCodePro-ExtraLight.otf</string>
    <string name="font_name_source_code_pro_light">source-code-pro/SourceCodePro-Light.otf</string>
    <string name="font_name_source_code_pro_medium">source-code-pro/SourceCodePro-Medium.otf</string>
    <string name="font_name_source_code_pro_regular">source-code-pro/SourceCodePro-Regular.otf</string>
    <string name="font_name_source_code_pro_semi_bold">source-code-pro/SourceCodePro-Semibold.otf</string>
    <string name="font_name_source_sans_pro_black">source-sans-pro/SourceSansPro-Black.otf</string>
    <string name="font_name_source_sans_pro_black_it">source-sans-pro/SourceSansPro-BlackIt.otf</string>
    <string name="font_name_source_sans_pro_bold">source-sans-pro/SourceSansPro-Bold.otf</string>
    <string name="font_name_source_sans_pro_bold_it">source-sans-pro/SourceSansPro-BoldIt.otf</string>
    <string name="font_name_source_sans_pro_extra_light">source-sans-pro/SourceSansPro-ExtraLight.otf</string>
    <string name="font_name_source_sans_pro_extra_light_it">source-sans-pro/SourceSansPro-ExtraLightIt.otf</string>
    <string name="font_name_source_sans_pro_it">source-sans-pro/SourceSansPro-It.otf</string>
    <string name="font_name_source_sans_pro_light">source-sans-pro/SourceSansPro-Light.otf</string>
    <string name="font_name_source_sans_pro_light_it">source-sans-pro/SourceSansPro-LightIt.otf</string>
    <string name="font_name_source_sans_pro_regular">source-sans-pro/SourceSansPro-Regular.otf</string>
    <string name="font_name_source_sans_pro_semibold">source-sans-pro/SourceSansPro-Semibold.otf</string>
    <string name="font_name_source_sans_pro_semibold_it">source-sans-pro/SourceSansPro-SemiboldIt.otf</string>
    <string name="font_name_source_serif_pro_bold">source-serif-pro/SourceSerifPro-Bold.otf</string>
    <string name="font_name_source_serif_pro_regular">source-serif-pro/SourceSerifPro-Regular.otf</string>
    <string name="font_name_source_serif_pro_semibold">source-serif-pro/SourceSerifPro-Semibold.otf</string>
    <string name="font_name_amatic_bold">amatic/Amatic-Bold.ttf</string>
    <string name="font_name_amatic_sc_regular">amatic/AmaticSC-Regular.ttf</string>
    <string name="font_name_chunk_five">ChunkFive/Chunkfive.otf</string>
    <string name="font_name_lato_black">lato/Lato-Bla.ttf</string>
    <string name="font_name_lato_black_italic">lato/Lato-BlaIta.ttf</string>
    <string name="font_name_lato_bold">lato/Lato-Bol.ttf</string>
    <string name="font_name_lato_bold_italic">lato/Lato-BolIta.ttf</string>
    <string name="font_name_lato_hairline">lato/Lato-Hai.ttf</string>
    <string name="font_name_lato_hairline_italic">lato/Lato-HaiIta.ttf</string>
    <string name="font_name_lato_light">lato/Lato-Lig.ttf</string>
    <string name="font_name_lato_light_italic">lato/Lato-LigIta.ttf</string>
    <string name="font_name_lato_regular">lato/Lato-Reg.ttf</string>
    <string name="font_name_lato_regular_italic">lato/Lato-RegIta.ttf</string>
    <string name="font_name_leckerli_one_regular">leckerli-one/LeckerliOne-Regular.otf</string>
    <string name="font_name_gasper_bold_italic">gaspar/Gaspar_Bold_Italic.otf</string>
    <string name="font_name_gasper_bold">gaspar/Gaspar_Bold.otf</string>
    <string name="font_name_gasper_regular_italic">gaspar/Gaspar_Regular_Italic.otf</string>
    <string name="font_name_gasper_regular">gaspar/Gaspar_Regular.otf</string>
    <string name="font_name_amble_bold">amble/Amble-Bold.ttf</string>
    <string name="font_name_amble_bold_italic">amble/Amble-BoldItalic.ttf</string>
    <string name="font_name_amble_italic">amble/Amble-Italic.ttf</string>
    <string name="font_name_amble_light">amble/Amble-Light.ttf</string>
    <string name="font_name_amble_light_condensed">amble/Amble-LightCondensed.ttf</string>
    <string name="font_name_amble_light_condensed_italic">amble/Amble-LightCondensedItalic.ttf</string>
    <string name="font_name_amble_light_italic">amble/Amble-LightItalic.ttf</string>
    <string name="font_name_amble_regular">amble/Amble-Regular.ttf</string>

    <string name="burette_point">・</string>
    <string name="burette_hyphen">-</string>
    <string name="burette_circle">●</string>
    <string name="burette_fastforward">&gt;&gt;</string>
    <string name="burette_arrow">→</string>
    <string name="burette_triangle">▶︎</string>
    <string name="burette_finger">☞︎</string>

</resources>
