<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_fullscreen"
        android:icon="@drawable/ic_action_fullscreen"
        android:title="@string/action_fullscreen"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_first_page"
        android:icon="@drawable/ic_action_prev"
        android:title="@string/action_first_page"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_last_page"
        android:icon="@drawable/ic_action_next"
        android:title="@string/action_last_page"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/action_reload"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
